k8s/clusters/homelabk8s01/infrastructure/vault/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: vault
  labels:
    kubernetes.io/metadata.name: vault
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
