k8s/clusters/homelabk8s01/infrastructure/vault/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vault
  namespace: vault
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: homelab-gateway
      namespace: default
      sectionName: https
  hostnames:
    - vault.homelab.local
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: vault
          port: 8200
          group: ''
          kind: Service
